Details
-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.4.2, 5.5.0, 5.6.0, 5.7.0, 5.8.0
-
Android
Description
androiddeployqt imports plugins that are not included in qml file. That is if the plugin exists inside another plugin which is included in the qml. Using qmlimportscanner alone the plugin is not listed as dependency but as with androiddeployqt the searc seems to be done recursively to the subfolders too, it is included in the package.
Attached is an example which can be used to reproduce the problem.
Output of qmlimportscanner which works ok alone:
[ { "name": "QtQuick", "type": "module", "version": "2.4" }, { "name": "QtQuick.Window", "type": "module", "version": "2.2" }, { "name": "MyCompany.CustomPlugin", "path": "C:/SupportCodes/androiddeployqt_bug_INC-669717/androiddeployqt_bug/QT_INSTALL_DIRECTORY/android_armv7/qml/MyCompany/CustomPlugin", "plugin": "TestPlugin1", "type": "module", "version": "1.0" }, { "name": "QtQuick", "type": "module", "version": "2.3" } ]
Here is the output of androiddeployqt:
-- Adding 'C:/Qt/Qt5.4.2_SS_opensource/5.4/android_armv7/qml/MyCompany/CustomPlugin' as QML dependency
-- Appending dependency found by qmlimportscanner: C:/Qt/Qt5.4.2_SS_opensource/5.4/android_armv7/qml/MyCompany/CustomPlugin/.DS_Store
-- Appending dependency found by qmlimportscanner: C:/Qt/Qt5.4.2_SS_opensource/5.4/android_armv7/qml/MyCompany/CustomPlugin/libCustomPlugin.so
Reading dependencies from C:/Qt/Qt5.4.2_SS_opensource/5.4/android_armv7/qml/MyCompany/CustomPlugin/libCustomPlugin.so
lib/libQt5Quick.so
lib/libQt5Gui.so
lib/libQt5Qml.so
lib/libQt5Network.so
lib/libQt5Core.so
-- Appending dependency found by qmlimportscanner: C:/Qt/Qt5.4.2_SS_opensource/5.4/android_armv7/qml/MyCompany/CustomPlugin/qmldir
-- Appending dependency found by qmlimportscanner: C:/Qt/Qt5.4.2_SS_opensource/5.4/android_armv7/qml/MyCompany/CustomPlugin/RuntimePlugin/.DS_Store
-- Appending dependency found by qmlimportscanner: C:/Qt/Qt5.4.2_SS_opensource/5.4/android_armv7/qml/MyCompany/CustomPlugin/RuntimePlugin/libRuntimePlugin.so
Reading dependencies from C:/Qt/Qt5.4.2_SS_opensource/5.4/android_armv7/qml/MyCompany/CustomPlugin/RuntimePlugin/libRuntimePlugin.so
lib/libQt5Quick.so
lib/libQt5Gui.so
lib/libQt5Qml.so
lib/libQt5Network.so
lib/libQt5Core.so
-- Appending dependency found by qmlimportscanner: C:/Qt/Qt5.4.2_SS_opensource/5.4/android_armv7/qml/MyCompany/CustomPlugin/RuntimePlugin/qmldir
Attachments
Issue Links
- is duplicated by
-
QTBUG-61580 unwanted dependies for unused QtQuickControls2 styles
-
- Closed
-
- resulted in
-
QTBUG-60918 Type Dialog Unavailable
-
- Closed
-