androiddeployqt: don't include plugins that are not necessary

This patch adds simple filtering of file names received from
findFilesRecursively function. If any plugins located in subfolders are
actually used, they will be included to qmlimportscanner output and
hence processed on the next iterations of outer loop.

Task-number: QTBUG-46451
Change-Id: I0243cba41a616652ff356a98baaf708aa0b6a3f7
Reviewed-by: BogDan Vatra <bogdan@kdab.com>